table no longer has horizontal scroll

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -12,6 +12,7 @@ div.table {
 
   .table-body {
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .table-row {
